// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inheritance mutations create 1`] = `
{
  "createReview": {
    "content": "A review",
    "rating": 5,
  },
}
`;

exports[`inheritance mutations delete and restore 1`] = `
{
  "mutated": "817c55de-2f77-4159-bd44-9837d868f889",
}
`;

exports[`inheritance mutations delete and restore 2`] = `
{
  "mutated": "817c55de-2f77-4159-bd44-9837d868f889",
}
`;

exports[`inheritance mutations update 1`] = `
{
  "updateReview": {
    "content": "A review",
    "rating": 5,
  },
}
`;

exports[`inheritance queries root type listQuery 1`] = `
{
  "reactions": [
    {
      "content": "This is a review with a rating",
      "rating": 5,
      "type": "Review",
    },
    {
      "content": "I do not know but here is the answer.",
      "type": "Answer",
    },
    {
      "content": "What is the question?",
      "type": "Question",
    },
  ],
}
`;

exports[`inheritance queries root type query 1`] = `
{
  "reaction": {
    "content": "This is a review with a rating",
    "rating": 5,
    "type": "Review",
  },
}
`;

exports[`inheritance queries sub type listQuery 1`] = `
{
  "reviews": [
    {
      "content": "This is a review with a rating",
      "rating": 5,
      "type": "Review",
    },
  ],
}
`;

exports[`inheritance queries sub type query 1`] = `
{
  "review": {
    "content": "This is a review with a rating",
    "rating": 5,
    "type": "Review",
  },
}
`;
